# ute-ha-uruguay

./: .gitignore  LICENSE  README.md  hacs.json  info.md
client-py/: demo.py  pyproject.toml
client-py/ute_client/: __init__.py  client.py
client-ts/: demo.ts  package.json  tsconfig.json
client-ts/src/: index.ts
custom_components/ute_energy/: binary_sensor.py  config_flow.py  const.py  manifest.json  models.py  strings.json
custom_components/ute_uruguay/: api.py  const.py  manifest.json
docs/: CAPTURE.md  DASHBOARD.md  PROTOCOL.md
ha-integration/custom_components/ute_energy/: __init__.py  coordinator.py  sensor.py
scripts/: sync-vendor.sh
tooling/: create-avd.sh  dump_flow_one.py  dump_flows.py  post-boot.sh  run-avd.sh  run-mitm.sh  run-redroid.sh  security_bypass_addon.py
