[project]
name = "ute-client"
version = "0.1.0"
description = "Cliente Python para la API privada de la app móvil UTE (Uruguay)"
authors = [{ name = "Juan Reyes", email = "juanmreyesa@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ute_client"]
